--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,7 @@
     <div class="col-sm-10 ">
 
       {% block content %}{% endblock %}
-
+        {% include "includes/pagination.html" %}
       {% block pagination %}
       {% endblock %}
 
